# rust-async-dnssd

./: .travis.yml  Cargo.toml  README.md  build.rs  devbox.json  mdns-ipc.md  rustfmt.toml
.github/workflows/: rust.yml
.travis/: id_rsa.enc  travis-doc-upload.cfg  travis-doc-upload.sh
examples/: browse.rs  enumerate-domains.rs  register.rs
mdns_ipc/: Cargo.toml
mdns_ipc/src/: enums.rs  errors.rs  lib.rs  reader.rs  rrdata.rs  status.rs  structs.rs
mdns_ipc/src/connection/: mod.rs  windows.rs
mdns_ipc_core/: Cargo.toml
mdns_ipc_core/src/: consts.rs  errors.rs  hex_display.rs  lib.rs  raw_impls.rs  strings.rs  traits.rs  utils.rs
mdns_ipc_derive/: Cargo.toml
mdns_ipc_derive/src/: lib.rs
src/: cstr.rs  dns_consts.rs  error.rs  ffi.rs  flags_macro.rs  fused_err_stream.rs  future.rs  inner.rs  interface.rs  interface_index.rs  lib.rs  non_exhaustive_struct.rs  notify.rs  raw.rs  raw_box.rs  remote.rs  stream.rs  timeout_stream.rs  txt_record.rs
src/evented/: mod.rs  unix.rs  windows.rs
src/service/: browse.rs  connection.rs  enumerate_domains.rs  mod.rs  query_record.rs  records.rs  register.rs  resolve.rs  resolve_host.rs
