[package]
name = "async-dnssd"
build = "build.rs"
# also bump version in src/lib.rs
version = "0.5.0-rc.1"
authors = ["Stefan Bühler <stbuehler@web.de>"]
description = "Asynchronous wrapper for DNS-SD C libraries"
documentation = "https://stbuehler.github.io/rustdocs/async-dnssd/async_dnssd/"
homepage = "https://github.com/stbuehler/rust-async-dnssd"
repository = "https://github.com/stbuehler/rust-async-dnssd"
readme = "README.md"
keywords = ["dnssd", "dns-sd", "mdns", "network", "async"]
license = "MIT"
edition = "2018"

[build-dependencies]
pkg-config = "0.3.9"

[dependencies]
bitflags = "1.0.4"
futures = "0.3.1"
libc = "0.2.65"
log = "0.4.8"
pin-utils = "0.1.0-alpha.4"
tokio = { version = "1.1", features = ["time", "io-util", "macros", "rt", "net"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["winsock2"] }
